--- a/frontend/src/component/delivery/dispalyList.css
+++ b/frontend/src/component/delivery/dispalyList.css
@@ -26,13 +26,13 @@
 }
 
 #table th, #table td {
-  border: 1px solid #ddd;
+  border: 1px solid #080808;
   padding: 8px;
   text-align: center;
 }
 
 #table th {
-  background-color: #f2f2f2;
+  background-color: #000000;
   font-weight: bold;
 }
 
