--- a/frontend/src/component/recycledProducts/RecycledProducts.css
+++ b/frontend/src/component/recycledProducts/RecycledProducts.css
@@ -1,136 +1,146 @@
+.component-div {
+  display: inline-block; 
+  vertical-align: top; 
+  width: calc(100% - 220px);
+}
 
+#AddRecycleProductsButton {
+  margin: 0px 20px; 
+}
+.page-title{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.page-title-div {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.search-input {
+  padding: 5px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  width: 400px !important;
+  margin: 1px;
+}
 
 #table-div{
-    display: flex;
-    margin: 0;
-    padding: 20px;
-    justify-content: center;
-  }
-  
-  .window {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: linear-gradient(to right, rgb(40, 55, 139, 0.6) , rgb(95, 0, 107,0.6) );
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
+  display: flex;
+  margin: -30px 0px 0px 0px;
+  padding: 20px;
+  justify-content: center;
+}
 
-  .page-title{
-    margin: 10px 0px 0px 0px;
-    padding: 0px 50px 0px 50px;
-  }
-    
-  .window-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 500px; 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  }
+.window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000 !important;
+}
   
-  .window-title{
-    text-align: center;
-  }
-  
-  .lebel-div {
-    display: flex;
-    justify-content: space-between;
-    margin: 0px;
-    padding: 10px;
-  }
-  
-  .input-fields{
-    min-width: 300px !important;
-    min-height: 30px;
-    margin: 0px;
-    padding: 0px 20px;
-    background-color: #d5ceff;
-    border: none;
-  }
-  
-  .window-lebel{
-    margin: 10px 0px;
-  }
-  
-  .button-div{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0px 0px 0px;
-    padding: 10px;
-  }
-  
-  .window-save-button{
-    min-width: 150px;
-    background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
-    color:  rgb(255, 255, 255);
-    border-radius: 30px;
-  }
-  
-  .window-cancel-button{
-    min-width: 150px;
-    background-color: #adadad;
-    color:  rgb(255, 255, 255);
-    border-radius: 30px;
-  }
+.window-content {
+  margin: 0px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
 
-  .page-title-div{
-    display: flex;
-    margin: 20px 0px -30px 0px;
-    padding: 20px;
-    justify-content: center;
-  }
 
-  #AddRecycleProductsButton {
-    background-image: linear-gradient(to right, rgb(40, 55, 139,0.8) , rgb(95, 0, 107, 0.8));
-    color: white;
-    border-radius: 20px;
-  }
-    
-  table {
-    border-collapse: collapse;
-    border-color: rgb(112, 112, 112);
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  }
+.window-title{
+  text-align: center;
+}
+
+.lebel-div {
+  margin: 0px;
+  padding: 10px;
+}
+
+.input-fields{
+  min-width: 300px !important;
+  min-height: 30px;
+  margin: 0px;
+  padding: 0px 20px;
+  background-color: #ffffff;
+  border: 1px solid rgb(194, 194, 194);
+}
+
+.window-lebel{
+  margin: 10px 0px;
+}
+
+.button-div{
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0px 0px 0px;
+  padding: 10px;
+}
+
+.window-save-button{
+  min-width: 150px;
+  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
+  color:  rgb(255, 255, 255);
+  border-radius: 30px;
+}
+
+.window-cancel-button{
   
-  table thead tr {
-    background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
-    color: #ffffff;
-    text-align: left;
-    text-align: center;
-  }
+  min-width: 150px;
+  background-color: #adadad;
+  color:  rgb(255, 255, 255);
+  border-radius: 30px;
+}
   
-  table th,
-  table td {
-      padding: 10px 15px;
-  }
-  
-  table td {
-    border: 1px solid #8f8f8f;
-  }
-  
-  table tbody tr {
-    border-bottom: 1px solid #dddddd;
-  }
-  
-  table tbody tr:nth-of-type(even) {
-    background-color: #e9e9e9;
-  }
-  
-  #update-button {
-    background-color: transparent !important;
-    color: rgb(12, 165, 12);
-  }
-  
-  #delete-button {
-    background-color: transparent !important;
-    color: rgb(219, 25, 25);
-  }
+table {
+  border-collapse: collapse;
+  border-color: rgb(112, 112, 112);
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+table thead tr {
+  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
+  color: #ffffff;
+  text-align: left;
+  text-align: center;
+}
+
+table th,
+table td {
+    padding: 10px 15px;
+}
+
+table td {
+  border: 1px solid #8f8f8f;
+}
+
+table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+table tbody tr:nth-of-type(even) {
+  background-color: #e9e9e9;
+}
+
+#update-button {
+  background-color: transparent !important;
+  color: rgb(12, 165, 12);
+}
+
+#delete-button {
+  background-color: transparent !important;
+  color: rgb(219, 25, 25);
+}
