--- a/frontend/src/component/recycledProducts/RecyclingProductsTable.css
+++ b/frontend/src/component/recycledProducts/RecyclingProductsTable.css
@@ -1,8 +1,37 @@
+.component-div {
+  display: inline-block; 
+  vertical-align: top; 
+  width: calc(100% - 220px);
+}
 
+#AddRecycleProductsButton {
+  margin: 0px 20px; /* Add some space between the button and the search input */
+    background-image: linear-gradient(to right, rgb(40, 55, 139,0.8) , rgb(95, 0, 107, 0.8));
+    color: white;
+    border-radius: 20px;
+}
+.page-title{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.page-title-div {
+  margin: 0px;
+  display: inline-flex;
+  justify-content: space-between;
+  padding: 20px 40px;
+}
+
+.search-input {
+  margin: 0px 50px !important;
+  padding: 5px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+}
 
 #table-div{
   display: flex;
-  margin: 0;
+  margin: -30px 0px 0px 0px;
   padding: 20px;
   justify-content: center;
 }
@@ -13,18 +42,19 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.6) , rgb(95, 0, 107,0.6) );
+  background-image: linear-gradient(to right, rgba(255, 255, 255) , rgb(255, 255, 255) );
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
+  z-index: 1000 !important;
+  width: 100%; 
 }
   
 .window-content {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  width: 500px; 
+  width: 100%; 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
