--- a/frontend/src/component/delivery/Header.css
+++ b/frontend/src/component/delivery/Header.css
@@ -15,7 +15,7 @@
 }
 
 /* Sidebar */
-.sidebar {
+#sidebar {
   width: 250px;
   background-color: #002244;
   padding: 20px;
@@ -24,28 +24,28 @@
   flex-direction: column;
 }
 
-.sidebar-logo {
+#sidebar-logo {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-.sidebar-nav ul {
+#sidebar-nav ul {
   list-style-type: none;
   padding: 0;
 }
 
-.sidebar-nav li {
+#sidebar-nav li {
   margin: 15px 0;
 }
 
-.sidebar-nav li a {
-  color: white;
+#sidebar-nav li a {
+  color: #002244;
   text-decoration: none;
   font-weight: bold;
 }
 
-.sidebar-nav li a:hover {
+#sidebar-nav li a:hover {
   text-decoration: underline;
 }
 
