--- a/frontend/src/component/recycledProducts/RecycleReportGeneration.css
+++ b/frontend/src/component/recycledProducts/RecycleReportGeneration.css
@@ -10,6 +10,7 @@
     margin-top: 40px;
     font-size: 24px;
     font-weight: 600;
+    text-align: center !important;
   }
 
   .report-download-button-div{
