--- a/frontend/src/component/recycledProducts/RecycledProducts.css
+++ b/frontend/src/component/recycledProducts/RecycledProducts.css
@@ -2,10 +2,14 @@
   display: inline-block; 
   vertical-align: top; 
   width: calc(100% - 220px);
+  margin-left: 260px;
 }
 
 #AddRecycleProductsButton {
-  margin: 0px 20px; 
+  margin: 0px 20px; /* Add some space between the button and the search input */
+    background-image: linear-gradient(to right, rgba(86, 40, 139, 0.8) , rgb(95, 0, 107, 0.8));
+    color: white;
+    border-radius: 5px;
 }
 .page-title{
   font-size: 24px;
@@ -13,17 +17,19 @@
 }
 
 .page-title-div {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  margin: 0px;
+  display: inline-flex;
+  justify-content: space-between;
+  padding: 20px 20px !important;
 }
 
 .search-input {
+  margin: 0px 50px !important;
   padding: 5px; 
   border: 1px solid #ccc; 
   border-radius: 4px; 
-  width: 400px !important;
-  margin: 1px;
+  height: 45px !important;
+  width: 300px !important;
 }
 
 #table-div{
@@ -31,74 +37,6 @@
   margin: -30px 0px 0px 0px;
   padding: 20px;
   justify-content: center;
-}
-
-.window {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000 !important;
-}
-  
-.window-content {
-  margin: 0px;
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
-  width: 100%; 
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-}
-
-
-.window-title{
-  text-align: center;
-}
-
-.lebel-div {
-  margin: 0px;
-  padding: 10px;
-}
-
-.input-fields{
-  min-width: 300px !important;
-  min-height: 30px;
-  margin: 0px;
-  padding: 0px 20px;
-  background-color: #ffffff;
-  border: 1px solid rgb(194, 194, 194);
-}
-
-.window-lebel{
-  margin: 10px 0px;
-}
-
-.button-div{
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0px 0px 0px;
-  padding: 10px;
-}
-
-.window-save-button{
-  min-width: 150px;
-  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
-  color:  rgb(255, 255, 255);
-  border-radius: 30px;
-}
-
-.window-cancel-button{
-  
-  min-width: 150px;
-  background-color: #adadad;
-  color:  rgb(255, 255, 255);
-  border-radius: 30px;
 }
   
 table {
@@ -111,8 +49,8 @@ table {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-table thead tr {
-  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8));
+.recycled-table thead tr {
+  background-image: linear-gradient(to right, rgb(40, 55, 139, 0.8) , rgb(95, 0, 107,0.8)) !important;
   color: #ffffff;
   text-align: left;
   text-align: center;
