--- a/frontend/src/component/recycledProducts/RecycleProductSidebar.css
+++ b/frontend/src/component/recycledProducts/RecycleProductSidebar.css
@@ -1,4 +1,4 @@
-.sidebar {
+#sidebar {
     margin-bottom: 0px;
     top: 0;
     left: 0; 
@@ -8,18 +8,19 @@
     display: inline-block; 
     vertical-align: top; 
     width: 250px; 
+    margin: -19px 0px -39px 0px;
 }
 
-.sidebar h2 {
+#sidebar h2 {
     margin-top: 0; 
 }
 
-.sidebar ul {
+#sidebar ul {
     list-style-type: none;
     padding: 0px 4px 0px 0px;
 }
 
-.sidebar ul li {
+#sidebar ul li {
     margin: 10px 0; 
     background-color: #120027;
     padding: 10px;
@@ -27,12 +28,12 @@
     border: 1px solid rgb(150, 150, 150);
 }
 
-.sidebar ul li:hover{
+#sidebar ul li:hover{
     color: white;
     border: 1px solid rgb(255, 255, 255);
 }
 
-.sidebar ul li a {
+#sidebar ul li a {
     text-decoration: none; 
     color: #ffffff; 
     transition: color 0.3s; 
