--- a/frontend/src/component/recycledProducts/RecyclingProductsTable.css
+++ b/frontend/src/component/recycledProducts/RecyclingProductsTable.css
@@ -1,8 +1,16 @@
-.component-div {
-  display: inline-block; 
-  vertical-align: top; 
-  width: calc(100% - 220px);
-  margin-left: 260px;
+#component-div {
+  display: inline-flex  !important;
+  vertical-align: top;
+  width: 100%!important;
+}
+#sidebar-section{
+  display: inline-flex  !important;
+  position: sticky;
+  width: 25% !important;
+}
+
+#body-div{
+  display: flex !important;
 }
 
 #AddRecycleProductsButton {
