--- a/frontend/src/component/recycledProducts/UpdateProducts.css
+++ b/frontend/src/component/recycledProducts/UpdateProducts.css
@@ -1,3 +1,31 @@
+#window {
+  padding: 10px 0px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; 
+  background-color: #ffffff;
+}
+  
+#window-content {
+  background-color: white;
+  padding: 10px;
+  border-radius: 8px;
+  overflow: auto !important; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  height: inherit !important;
+}
+
+.update-form{
+  margin-top: -10px;
+}
+
 .update-product-form {
     border: 1px solid #ccc;
     padding: 20px;
